fable/test/syntax_error/label_cont_char.f
      program prog
    1 i=4
    2	j=5
    3xk=6
      end
